@@ -6,16 +6,22 @@ import hr.fer.unifier.backend.db.AdvertDao;
 import hr.fer.unifier.backend.db.entity.Advert;
 import hr.fer.unifier.backend.db.user.UserDao;
 import hr.fer.unifier.backend.db.user.entity.User;
+import hr.fer.unifier.backend.enums.UserType;
+import hr.fer.unifier.backend.mapper.AdvertMapper;
 import hr.fer.unifier.backend.service.AdvertService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static hr.fer.unifier.backend.util.FileUtil.validateImage;
 
 @Service
 @RequiredArgsConstructor
@@ -25,19 +31,18 @@ public class AdvertServiceImpl implements AdvertService {
 
   private final UserDao userDao;
 
-  private final ModelMapper modelMapper;
+  private final AdvertMapper advertMapper;
+
+  @Transactional
+  @Override
+  public AdvertResponseDTO saveAdvert(AdvertDTO advertDTO, MultipartFile file) {
+    return advertMapper.toAdvertResponseDTO(createAdvert(advertDTO,file));
+  }
 
   @Transactional
   @Override
   public AdvertResponseDTO saveAdvert(AdvertDTO advertDTO) {
-    Advert advert = modelMapper.map(advertDTO, Advert.class);
-    User advertUser = userDao.findById(advertDTO.getUserId()).orElseThrow(() ->
-            new EntityNotFoundException("User with id " + advertDTO.getUserId() + " does not exist.")
-    );
-    advert.setUser(advertUser);
-    advert.setDeleted(false);
-    advert = advertDao.save(advert);
-    return modelMapper.map(advert, AdvertResponseDTO.class);
+    return advertMapper.toAdvertResponseDTO(createAdvert(advertDTO,null));
   }
 
   @Transactional
@@ -54,9 +59,11 @@ public class AdvertServiceImpl implements AdvertService {
       new EntityNotFoundException("User with id " + userId + " does not exist.")
     );
 
-    List<Advert> adverts = advertDao.findByUserAndDeletedFalse(user).orElse(Collections.emptyList());
-
-    return adverts.stream().map(advert -> modelMapper.map(advert, AdvertResponseDTO.class)).collect(Collectors.toList());
+    return advertDao.findByUserAndDeletedFalse(user)
+            .orElse(Collections.emptyList())
+            .stream()
+            .map(advertMapper::toAdvertResponseDTO)
+            .toList();
   }
 
   @Transactional(readOnly = true)
@@ -65,8 +72,39 @@ public class AdvertServiceImpl implements AdvertService {
     return advertDao.findAdvertsByDeletedFalse()
             .orElse(Collections.emptyList())
             .stream()
-            .map(advert -> modelMapper.map(advert, AdvertResponseDTO.class))
+            .map(advertMapper::toAdvertResponseDTO)
             .toList();
+  }
+
+  private Advert createAdvert(AdvertDTO advertDTO, MultipartFile file){
+    User advertUser = userDao.findById(advertDTO.getUserId()).orElseThrow(() ->
+            new EntityNotFoundException("User with id " + advertDTO.getUserId() + " does not exist.")
+    );
+
+    if (!advertUser.isApproved()) {
+        throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Niste odobreni od strane admina, ne možete raditi volonterske oglase!");
+    }
+
+    if (advertUser.isBlocked()) {
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Trenutno ste blokirani, ne možete raditi volonterske oglase!");
+    }
+
+    if (advertUser.getUserType().equals(UserType.PERSON_IN_NEED)){
+      throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Nemate prava za stvaranje volonterskih oglasa!");
+    }
+
+    Advert advert = advertDao.save(advertMapper.toAdvert(advertDTO, advertUser));
+
+    if (file != null && !file.isEmpty()){
+      try{
+        validateImage(file);
+        advert.setAdvertImage(file.getBytes());
+      }catch (IOException ex){
+        throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Couldn't save image.", ex);
+      }
+    }
+
+    return advert;
   }
 
 }
